# cloud-computing

./: README.md
.devcontainer/: devcontainer.json
actix-demo/: Cargo.toml
actix-demo/src/: main.rs
containerized-hello/: Cargo.toml  Dockerfile
containerized-hello/src/: main.rs
github-actions/: hello.py
hello-lambda/: Cargo.toml  Makefile
hello-lambda/src/: main.rs
marco-polo-lambda/src/: main.rs
minicube_car/: Cargo.toml  Dockerfile  Makefile  README.md
minicube_car/src/: lib.rs  main.rs
password-generator/: Cargo.toml  README.md
password-generator/src/: lib.rs  main.rs
random-num/: Cargo.toml  Makefile
random-num/src/: main.rs
rust-formatting/: README.md
rust-formatting/src/: main.rs
timer/: Cargo.toml  README.md
timer/src/: main.rs
webdocker/: README.md
