[package]
name = "car_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
reqwest = "0.11.14"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.93"